feat: Displaying vote for snaps & top rated snap UI

--- a/packages/app_center/lib/src/l10n/app_en.arb
+++ b/packages/app_center/lib/src/l10n/app_en.arb
@@ -146,6 +146,7 @@
     "snapCategorySocial": "Social",
     "snapCategoryUbuntuDesktop": "Ubuntu Desktop",
     "snapCategoryUbuntuDesktopSlogan": "Jump start your desktop",
+    "snapCategoryChartSlogan": "Top rated",
     "snapCategoryUtilities": "Utilities",
     "snapConfinementClassic": "Classic",
     "snapConfinementDevmode": "Devmode",
